--- a/github_folder/c_projects/7game_hearts/makefile
+++ b/github_folder/c_projects/7game_hearts/makefile
@@ -19,7 +19,7 @@ game.o: $(P_GAME)game.c $(P_GAME)game.h $(P_ROUND)round.h \
 	$(P_PLAYER)player.h $(P_CARDS)cards.h $(P_VEC)vector.h \
 	errstat.h $(P_DECK)deck.h
 
-	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_ROUND) -I \
+	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_ROUND) \
 	-I $(P_GAME) -c $(P_GAME)game.c
 
 round.o: $(P_ROUND)round.c $(P_ROUND)round.h $(P_DECK)deck.h \
@@ -43,7 +43,7 @@ player.o: $(P_PLAYER)player.c $(P_PLAYER)player.h \
 ui.o: $(P_UI)ui.c
 	$(CC) $(CFLAGS) -I $(P_UI) -c $(P_UI)ui.c
 
-vector.o: $(P_VEC)vector.c $(P_UI)ui.h
+vector.o: $(P_VEC)vector.c $(P_VEC)vector.h
 	$(CC) $(CFLAGS) -I $(P_VEC) -c $(P_VEC)vector.c
 
 testall.o: testall.c $(P_GAME)game.h $(P_PLAYER)player.h \
