--- a/github_folder/c_projects/7game_hearts/round/makefile
+++ b/github_folder/c_projects/7game_hearts/round/makefile
@@ -16,14 +16,14 @@ $(TARGET): $(OBJS)
 round.o: round.c round.h $(P_DECK)deck.h $(P_PLAYER)player.h $(P_ERRSTAT)errstat.h $(P_VEC)vector.h $(P_CARDS)cards.h
 	$(CC) $(CFLAGS) -I $(P_DECK) -I $(P_PLAYER) -I $(P_ERRSTAT) -I $(P_CARDS) -I $(P_VEC) -c round.c
 
-deck.o: $(P_DECK)deck.c $(P_DECK)deck.h $(P_CARDS)cards.h $(P_VEC)vector.h $(P_ERRSTAT)errstat.h
-	$(CC) $(CFLAGS) -I $(P_DECK) -I $(P_CARDS) -I $(P_VEC) -I $(P_ERRSTAT) -c $(P_DECK)deck.c
+deck.o: $(P_DECK)deck.c $(P_DECK)deck.h $(P_CARDS)cards.h $(P_VEC)vector.h
+	$(CC) $(CFLAGS) -I $(P_DECK) -I $(P_CARDS) -I $(P_VEC) -c $(P_DECK)deck.c
+
+player.o: $(P_PLAYER)player.c $(P_PLAYER)player.h $(P_CARDS)cards.h $(P_VEC)vector.h $(P_DECK)deck.h
+	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_CARDS) -I $(P_VEC) -I $(P_DECK) -c $(P_PLAYER)player.c
 
 vector.o: $(P_VEC)vector.c $(P_VEC)vector.h
 	$(CC) $(CFLAGS) -I $(P_VEC) -c $(P_VEC)vector.c
-
-player.o: $(P_PLAYER)player.c $(P_PLAYER)player.h $(P_CARDS)cards.h $(P_VEC)vector.h $(P_DECK)deck.h $(P_ERRSTAT)errstat.h
-	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_CARDS) -I $(P_VEC) -I $(P_DECK) -I $(P_ERRSTAT) -c $(P_PLAYER)player.c
 
 testround.o: testround.c round.h $(P_PLAYER)player.h $(P_ERRSTAT)errstat.h $(P_CARDS)cards.h
 	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_ERRSTAT) -I $(P_CARDS) -c testround.c
@@ -33,6 +33,3 @@ valgrind:
 
 clean:
 	rm -f $(TARGET) $(OBJS) V2.log
-
-
-
