--- a/github_folder/c_projects/7game_hearts/makefile
+++ b/github_folder/c_projects/7game_hearts/makefile
@@ -3,7 +3,7 @@
 TARGET = testall.out
 CC = gcc
 CFLAGS = -ansi -g -pedantic
-OBJS = vector.o ui.o deck.o player.o round.o game.o testall.o 
+OBJS = vector.o deck.o player.o round.o game.o testall.o 
 P_GAME = game/
 P_ROUND = round/
 P_CARDS = cards/
@@ -16,40 +16,31 @@ $(TARGET): $(OBJS)
 	$(CC) -o $(TARGET) $(OBJS)
 
 game.o: $(P_GAME)game.c $(P_GAME)game.h $(P_ROUND)round.h \
-	$(P_PLAYER)player.h $(P_CARDS)cards.h $(P_VEC)vector.h \
-	errstat.h $(P_DECK)deck.h
+	$(P_PLAYER)player.h errstat.h
 
-	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_ROUND) \
-	-I $(P_GAME) -c $(P_GAME)game.c
+	$(CC) $(CFLAGS) -c $(P_GAME)game.c
 
-round.o: $(P_ROUND)round.c $(P_ROUND)round.h $(P_DECK)deck.h \
-	$(P_PLAYER)player.h $(P_CARDS)cards.h $(P_GAME)game.h \
-	$(P_VEC)vector.h
+round.o: $(P_ROUND)round.c $(P_ROUND)round.h $(P_VEC)vector.h \
+	$(P_CARDS)cards.h $(P_DECK)deck.h $(P_PLAYER)player.h   \
+	errstat.h
 
-	$(CC) $(CFLAGS) -I $(P_ROUND) -I $(P_DECK) -I $(P_PLAYER) \
-	-I $(P_CARDS) -I $(P_GAME) -I $(P_VEC) -c $(P_ROUND)round.c
+	$(CC) $(CFLAGS) -c $(P_ROUND)round.c
 
-deck.o: $(P_DECK)deck.c $(P_DECK)deck.h $(P_CARDS)cards.h \
-	$(P_VEC)vector.h
+deck.o: $(P_DECK)deck.c $(P_DECK)deck.h $(P_VEC)vector.h \
+	$(P_CARDS)cards.h	
 
-	$(CC) $(CFLAGS) -I $(P_DECK) -I $(P_CARDS) -I $(P_VEC) \
-	-c $(P_DECK)deck.c
+	$(CC) $(CFLAGS) -c $(P_DECK)deck.c
 
 player.o: $(P_PLAYER)player.c $(P_PLAYER)player.h \
-	$(P_CARDS)cards.h $(P_VEC)vector.h $(P_DECK)deck.h errstat.h
+	$(P_VEC)vector.h $(P_CARDS)cards.h $(P_DECK)deck.h errstat.h
 
-	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_CARDS) -c $(P_PLAYER)player.c
-
-ui.o: $(P_UI)ui.c
-	$(CC) $(CFLAGS) -I $(P_UI) -c $(P_UI)ui.c
+	$(CC) $(CFLAGS) -c $(P_PLAYER)player.c
 
 vector.o: $(P_VEC)vector.c $(P_VEC)vector.h
-	$(CC) $(CFLAGS) -I $(P_VEC) -c $(P_VEC)vector.c
+	$(CC) $(CFLAGS) -c $(P_VEC)vector.c
 
-testall.o: testall.c $(P_GAME)game.h $(P_PLAYER)player.h \
-	$(P_ROUND)round.h errstat.h
-
-	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_ROUND) -I $(P_GAME) -c testall.c
+testall.o: testall.c
+	$(CC) $(CFLAGS) -c testall.c
 
 clean:
 	rm -f $(TARGET) $(OBJS)
