--- a/github_folder/c_projects/7game_hearts/game/makefile
+++ b/github_folder/c_projects/7game_hearts/game/makefile
@@ -18,40 +18,35 @@ $(TARGET): $(OBJS)
 game.o: game.c game.h $(P_ROUND)round.h $(P_PLAYER)player.h \
 	$(P_ERRSTAT)errstat.h
 
-	$(CC) $(CFLAGS) -I $(P_ROUND) -I $(P_PLAYER) \
-	-I $(P_ERRSTAT) -c game.c
+	$(CC) $(CFLAGS) -c game.c
 
 round.o: $(P_ROUND)round.c $(P_ROUND)round.h $(P_DECK)deck.h \
 	$(P_PLAYER)player.h $(P_ERRSTAT)errstat.h $(P_VEC)vector.h \
-	$(P_ERRSTAT) $(P_CARDS)cards.h
+	$(P_CARDS)cards.h
 
-	$(CC) $(CFLAGS) -I $(P_ROUND) -I $(P_DECK) -I $(P_PLAYER) \
-	-I $(P_CARDS) -I $(P_VEC) -c $(P_ROUND)round.c
+	$(CC) $(CFLAGS) -c $(P_ROUND)round.c
 
 deck.o: $(P_DECK)deck.c $(P_DECK)deck.h $(P_CARDS)cards.h \
 	$(P_VEC)vector.h
 
-	$(CC) $(CFLAGS) -I $(P_DECK) -I $(P_CARDS) -I $(P_VEC) \
-	-c $(P_DECK)deck.c
+	$(CC) $(CFLAGS) -c $(P_DECK)deck.c
 
 player.o: $(P_PLAYER)player.c $(P_PLAYER)player.h \
 	$(P_CARDS)cards.h $(P_VEC)vector.h $(P_ERRSTAT)errstat.h \
 	$(P_DECK)deck.h
 	
-	$(CC) $(CFLAGS) -I $(P_PLAYER) -I $(P_CARDS) -I $(P_VEC) \
-	-I $(P_ERRSTAT) -I $(P_DECK) -c $(P_PLAYER)player.c
+	$(CC) $(CFLAGS) -c $(P_PLAYER)player.c
 
 ui.o: $(P_UI)ui.c $(P_UI)ui.h
 	$(CC) $(CFLAGS) -I $(P_UI) -c $(P_UI)ui.c
 
 vector.o: $(P_VEC)vector.c $(P_VEC)vector.h
-	$(CC) $(CFLAGS) -I $(P_VEC) -c $(P_VEC)vector.c
+	$(CC) $(CFLAGS) -c $(P_VEC)vector.c
 
 testgame.o: testgame.c game.h $(P_ROUND)round.h \
 	$(P_PLAYER)player.h $(P_ERRSTAT)errstat.h
 
-	$(CC) $(CFLAGS) -I $(P_ROUND) -I $(P_PLAYER) \
-	-I $(P_ERRSTAT) -c testgame.c
+	$(CC) $(CFLAGS) -c testgame.c
 
 valgrind:
 	valgrind --log-file=V2.log --leak-check=full --track-origins=yes ./testgame.out
