--- a/github_folder/c_projects/7game_hearts/ui/makefile
+++ b/github_folder/c_projects/7game_hearts/ui/makefile
@@ -11,5 +11,8 @@ $(TARGET): $(OBJS)
 ui.o: ui.c ui.h
 	$(CC) $(CFLAGS) -c ui.c
 
+valgrind:
+	valgrind --log-file=V2.log --leak-check=full --track-origins=yes ./ui.out
+
 clean:
-	rm -f $(TARGET) $(OBJS)
+	rm -f $(TARGET) $(OBJS) V2.log
